--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,62 +1,27 @@
+version: '3.9'
+
 services:
   backend:
     build: ./backend
+    container_name: backend
     ports:
       - "8000:8000"
+    env_file: .env
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    depends_on:
+      - db
+
+  db:
+    image: mysql:8.0
+    container_name: mysql-db
     environment:
-      - OLLAMA_HOST=http://ollama:11434
-      - DATABASE_URL=sqlite+aiosqlite:///./data/handwriting.db
-      # Add your Langfuse keys here if needed
-      # - LANGFUSE_PUBLIC_KEY=...
-      # - LANGFUSE_SECRET_KEY=...
-    volumes:
-      - backend_data:/app/data
-      - ./backend/uploads:/app/uploads
-    depends_on:
-      ollama:
-        condition: service_healthy
-      ollama-init:
-        condition: service_completed_successfully
-
-  frontend:
-    build: ./frontend
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: yourdb
     ports:
-      - "5000:5000"
-    environment:
-      - BACKEND_URL=http://backend:8000
-    depends_on:
-      - backend
-
-  ollama:
-    image: ollama/ollama:latest
-    ports:
-      - "11434:11434"
+      - "3306:3306"
     volumes:
-      - ollama_data:/root/.ollama
-    healthcheck:
-      test: ["CMD", "ollama", "list"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-    # Uncomment the following section to enable GPU support (NVIDIA)
-    # deploy:
-    #   resources:
-    #     reservations:
-    #       devices:
-    #         - driver: nvidia
-    #           count: 1
-    #           capabilities: [gpu]
-
-  ollama-init:
-    image: curlimages/curl
-    depends_on:
-      ollama:
-        condition: service_healthy
-    command: >
-      sh -c "echo 'Waiting for Ollama...' && 
-             curl -X POST http://ollama:11434/api/pull -d '{\"name\": \"llava\"}' && 
-             echo 'Model pulled successfully!'"
+      - mysql_data:/var/lib/mysql
 
 volumes:
-  backend_data:
-  ollama_data:
+  mysql_data:
