--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,16 +7,11 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - OLLAMA_HOST=http://ollama:11434     # Use internal Docker DNS
+      - OLLAMA_HOST=https://blue-sunshine-8273.trycloudflare.com   # <-- Local machine Ollama URL
       - DATABASE_URL=sqlite+aiosqlite:///./data/handwriting.db
     volumes:
       - backend_data:/app/data
       - ./backend/uploads:/app/uploads
-    depends_on:
-      ollama:
-        condition: service_healthy
-      ollama-init:
-        condition: service_completed_successfully
 
   frontend:
     build: ./frontend
@@ -24,41 +19,9 @@ services:
     ports:
       - "5000:5000"
     environment:
-      - BACKEND_URL=http://15.236.201.26:8000     # <-- Public EC2 IP
+      - BACKEND_URL=http://15.236.201.26:8000     # <-- EC2 Public IP
     depends_on:
       - backend
 
-  ollama:
-    image: ollama/ollama:latest
-    container_name: ollama
-    ports:
-      - "11434:11434"
-    environment:
-      - OLLAMA_HOST=0.0.0.0                        # Enable remote API
-      - OLLAMA_ORIGINS=*                           # Allow CORS
-    volumes:
-      - ollama_data:/root/.ollama
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:11434/api/tags"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-
-  ollama-init:
-    image: curlimages/curl
-    container_name: ollama-init
-    depends_on:
-      ollama:
-        condition: service_healthy
-    command: >
-      sh -c "
-        echo 'Waiting for Ollama...' &&
-        sleep 5 &&
-        echo 'Pulling LLaVA model...' &&
-        curl -X POST http://ollama:11434/api/pull -d '{\"name\": \"llava\"}' &&
-        echo 'Model pulled successfully!'
-      "
-
 volumes:
   backend_data:
-  ollama_data:
