--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,8 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - OLLAMA_HOST=http://172.16.16.38:11434   # <-- your local machine IP or tunnel URL
+      # <-- Use the tunnel URL provided by cloudflared running on your local machine
+      - OLLAMA_HOST=https://workshops-coat-tommy-jimmy.trycloudflare.com
       - DATABASE_URL=sqlite+aiosqlite:///./data/handwriting.db
     volumes:
       - backend_data:/app/data
@@ -19,7 +20,8 @@ services:
     ports:
       - "5000:5000"
     environment:
-      - BACKEND_URL=http://15.236.201.26:8000   # <-- your EC2 public IP
+      # <-- EC2 public IP for browser access
+      - BACKEND_URL=http://15.236.201.26:8000
     depends_on:
       - backend
 
